<resources>

    <string name="app_name">ReporteMH</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <!-- Login -->
    
    <string name="login">login</string>
    <string name="lb_datos">Ingrese sus datos</string>
    <string name="email">CORREO</string>
    <string name="password">CONTRASEÑA</string>
    <string name="recover">RECUPERAR</string>
    <string name="sign">Ingresar</string>
    <string name="signup">REGISTRARSE</string>
    
    <!-- Recover Pass -->
    
    <string name="lb_recover">Ingresa una cuenta de correo válida</string>
    <string name="send">Enviar</string>
    
    
    <!-- SignUp -->
    
    <string name="user">USUARIO</string>
    <string name="corfirmar">CORFIRMAR</string>
    <string name="lb_confirm_pass">Mínimo 4 caracteres alfanumericos</string>
    

</resources>