<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_general"
    android:onClick="checkAndHideKeyboard"
    android:padding="20dp" >

    <ImageView
        android:id="@+id/iv_icon_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@null"
        android:src="@drawable/icon_user" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_icon_user"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/iv_icon_user"
        android:text="@string/lb_datos"
        android:textSize="18dp" />

    <RelativeLayout
        android:id="@+id/rl_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/iv_icon_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" >

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_tv" />

        <TextView
            android:id="@+id/lb_email"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/email"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@+id/lb_email"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:singleLine="true" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/rl_email"
        android:layout_centerHorizontal="true" >

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_tv" />

        <TextView
            android:id="@+id/lb_password"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@+id/lb_password"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="textPassword"
            android:singleLine="true" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/bt_login_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:contentDescription="@null"
        
        android:src="@drawable/login_fb_btn" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_login_fb"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/recuperar_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="recuperarPass"
            android:text="@string/recover" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
           
            android:text="@string/signup" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sign" />

</RelativeLayout>